# protobot

./: .gitmodules  README.md  frames.gv
.github/workflows/: blank.yml  stale.yml
src/camera_calibration/src/camera_calibration/: camera_calibrator.py
src/protobot_2dnav/: CMakeLists.txt
src/protobot_2dnav/config/: costmap_common_params.yaml
src/protobot_2dnav/launch/: move_base.launch
src/protobot_behavior/: CMakeLists.txt  package.xml
src/protobot_behavior/launch/: protobot_behavior.launch
src/protobot_behavior/src/: auto_state.py  bt.py  start_teleop.py  teleop_state.py  test_sm.py
src/protobot_behavior/src/states/: auto_state.py  check_leg_state.py  led_array.py  nav_states.py  nav_to_goal_state.py  prep_nav_state.py  red_led_state.py  search_state.py  simulation_state.py  (+3 more)
src/protobot_bringup/: CMakeLists.txt  package.xml  protobot_core.launch
src/protobot_bringup/launch/: frames.gv  protobot_core.launch  protobot_core_simulation.launch  protobot_mapping_test.launch  protobot_onboard.launch  protobot_remote.launch  protobot_simulation.launch
src/protobot_control/: CMakeLists.txt  package.xml
src/protobot_control/config/: control.yaml  encoder_settings.yaml  protobot_controller_gazebo.yaml
src/protobot_control/include/: protobot.h  roboclaw.h  settings.h
src/protobot_control/launch/: protobot_control.launch  protobot_control_simulation.launch
src/protobot_control/nodes/: ackermann_controller.py  cmd_vel_to_ackermann_drive.py
src/protobot_control/src/: macros.h  protobot.cpp  protobot.h  roboclaw.cpp  roboclaw.h  settings.h
src/protobot_description/: CMakeLists.txt  package.xml
src/protobot_description/launch/: frames.gv  protobot_description.launch  protobot_description_simulation.launch  protobot_rviz.launch  protobot_rviz_simulation.launch  spawn.launch  view_model.launch
src/protobot_description/rviz/: default.rviz  sim.rviz  test.rviz
src/protobot_description/src/: OdomToTF.cpp
src/protobot_description/urdf/: .protobot.urdf.xacro.swp  frames.gv  l  macro.xacro  proto_protobot.urdf.xacro  protobot.gazebo.xacro  protobot.urdf.xacro  protobot2.urdf.xacro  rover_simple.xacro  rover_simple_simulation.xacro
src/protobot_gazebo/: CMakeLists.txt  package.xml
src/protobot_gazebo/dem/: mars_129.tif
src/protobot_gazebo/launch/: protobot_gazebo.launch  protobot_gazebo_simulation.launch
src/protobot_gazebo/worlds/: elevation_mapping  marsmap.world  marsmap.world.bak  testing_site  testing_site2
src/protobot_gui/: CMakeLists.txt  package.xml
src/protobot_hardware/: CMakeLists.txt  package.xml
src/protobot_hardware/config/: LED_settings.yaml
src/protobot_hardware/include/: LEDArray.h  LEDArrayClientWrapper.h  LEDArrayServer.h  LEDArrayService.h  LEDSettings.h
src/protobot_hardware/launch/: LED_array.launch  LED_array_server.launch  frames.gv  prootobot_hardware_simulation.launch  protobot_hardware.launch  rs_camera.launch  rs_d400_and_t265.launch  rs_d435_camera_with_model.launch  ublox_zed-f9p.launch
src/protobot_hardware/src/: LEDArray.cpp  LEDArrayClientWrapper.cpp  LEDArrayDummyClient.cpp  LEDArrayServer.cpp  LEDArrayService.cpp
src/protobot_hardware/srv/: LED_toggle.srv
src/protobot_localization/: CMakeLists.txt  package.xml
src/protobot_localization/launch/: ekf.launch  ekf_simulation.launch  frames.gv  imu_filter.launch  launch.on  orb_slam2_stereo_sim.launch  protobot_localization.launch  protobot_localization_simulation.launch
src/protobot_mapping/: CMakeLists.txt  package.xml
src/protobot_mapping/launch/: OdometryTransform.launch  PoseWithCovariance.launch  elevation_mapping.launch  protobot_mapping.launch  protobot_mapping_simulation.launch  rtabmap.launch  rtabmap_simulation.launch
src/protobot_mapping/src/: OdometryTransform.cpp  PoseWithCovariance.cpp
src/protobot_nettools/: CMakeLists.txt  package.xml
src/protobot_planner/: CMakeLists.txt  package.xml
src/protobot_planner/config/: base_local_planner_params.yaml  base_local_planner_params_sim.yaml  costmap_common_params.yaml  costmap_common_params_sim.yaml  global_costmap_params.yaml  global_costmap_params_sim.yaml  local_costmap_params.yaml  local_costmap_params_sim.yaml
src/protobot_planner/launch/: move_base.launch  move_base_simulation.launch
src/protobot_planner/map/: map.pgm  map.yaml
src/protobot_planner/nodes/: SpiralScript.py  gps_goal.py  gps_nav_goal.py  spiralScript.cpp  test.py
src/protobot_teleop/: CMakeLists.txt  package.xml
src/protobot_teleop/launch/: protobot_teleop.launch
src/protobot_waypoint/: CMakeLists.txt  package.xml
src/protobot_waypoint/launch/: .protobot_waypoint.launch.swp  aruco_detect.launch  fiducial_slam.launch  protobot_waypoint.launch
src/protobot_waypoint/scripts/: gate_detection_node.py
src/realsense_ros_gazebo/xacro/: tracker.xacro
(+6 files in other folders)
