<?xml version="1.0"?>
<package format="2">
  <name>protobot_bringup</name>
  <version>0.0.0</version>
  <description>The protobot_bringup package</description>
  <maintainer email="mario@todo.todo">mario</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
