<?xml version="1.0"?>
<package format="2">
  <name>protobot_description</name>
  <version>0.0.0</version>
  <description>The protobot_description package</description>
  <maintainer email="mario@todo.todo">mario</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>geometry_msgs</build_depend>


  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
