<?xml version="1.0"?>
<package format="2">
  <name>protobot_gazebo</name>
  <version>0.0.0</version>
  <description>The protobot_gazebo package</description>

  <maintainer email="mario@todo.todo">Bret</maintainer>


  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>


  <export>
  </export>
</package>
